fixes to family visibility by date

--- a/css/style.css
+++ b/css/style.css
@@ -141,11 +141,21 @@ body {
 	font-size: 10px;
 }
 #animals {
-	background-color: gray;
 	width: 250px;
-	position: relative;
+	position: absolute;
 	z-index: 100;
-	padding-right: 7px;
+	padding: .5em 7px .5em 3px;
+	left: -250px; /* starting position */
+	border-right: 1px solid #888;
+	
+	background: #ececec; /* Old browsers */
+	background: -moz-linear-gradient(left, #ececec 0%, #fafafa 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ececec), color-stop(100%,#fafafa)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left, #ececec 0%,#fafafa 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left, #ececec 0%,#fafafa 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left, #ececec 0%,#fafafa 100%); /* IE10+ */
+	background: linear-gradient(to right, #ececec 0%,#fafafa 100%); /* W3C */
+	box-shadow: inset -2px 0 0 #eee,inset -1px 0 0 #ccc,2px 0 7px rgba(0,0,0,.15);
 }
 #animals > li ul {
 	display: none;
@@ -157,6 +167,14 @@ body {
 	   -moz-transition: all 0.2s ease-out;  /* Firefox 4-15 */
 	     -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
 	        transition: all 0.2s ease-out;  /* Firefox 16+, Opera 12.50+ */
+}
+#animals li.disabled {
+	opacity: .4 !important;
+}
+#animals li.disabled p:hover {
+	border: 1px solid #ccc;
+	background-color: white;
+	cursor: default;
 }
 #animals > li p{
 	list-style: none;
@@ -170,6 +188,9 @@ body {
 	     -o-transition: all 0.2s ease-out;  /* Opera 10.5–12.00 */
 	        transition: all 0.2s ease-out;  /* Firefox 16+, Opera 12.50+ */
 
+}
+#animals li.active p:hover {
+	background-color: #B2F7FF;
 }
 #animals > li span {
 	font-size: .5rem;
@@ -188,22 +209,22 @@ body {
 	display: inline;
 	/*border-color: #159674;*/
 }
+#animals > li.disabled p:hover span {
+	display: none;
+}
 #animals li p:hover, #animals li.active p,#animals li.active li.active p{
 	cursor: pointer;
-	background-color: #00b8cb;
-	border-color: #70FBFF;
+	border-color: #00b8cb;
 	box-shadow: -1px 0 5px rgba(0,50,0,.3);
 	left: .2rem;
 	/*opacity: 1;*/
 }
 #animals li p:hover,#animals li.active li p:hover,#animals li.active li.active p:hover {
 	background-color: #B2F7FF;
+	border-color: #00b8cb;
 }
 ul.animals li{
 	width: 90%;
-}
-#animals li.active li p {
-	background-color: #00b8cb;
 }
 #animals li.active {
 	left: .4rem;
@@ -446,11 +467,10 @@ path {
 }
 
 #nodeDetails hr {
-
 	clear: both;
 	border: none;
-	border-top: 1px solid gray;
-	width: 30%;
+	border-top: 1px solid #ddd;
+	width: 90%;
 	margin: 20px auto;
 }
 #nodeDetails hr:last-child {
@@ -466,24 +486,26 @@ path {
 }
 
 #nodeDetails .closeButton {
-
 	position: absolute;
-	top: -20px;
+	top: -24px;
 	left: 780px;
 	background-color: black;
 	color: white;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	-webkit-border-radius: 32px;
     -moz-border-radius: 32px;
     border-radius: 32px;
-    border: 3px solid #ff9b3e;
+    border: 5px solid #ff9b3e;
     width: 32px;
     height: 32px;
     text-align: center;
     line-height: 32px;
-    font-weight: bold;
+    font-weight: 900;
     cursor: pointer;
 
+}
+#nodeDetails .closeButton:hover {
+	background-color:#ff9b3e;
 }
 
 #nodeDetails dl, dt { 
@@ -503,7 +525,7 @@ path {
 }
 
 #nodeDetails blockquote {
-
+	color: #333;
 	line-height: 1.3;
 }
 
@@ -528,8 +550,9 @@ path {
 }
 
 .speciesColor{
-
-	color: #00b8cb; 
+	font-weight: bold;
+	padding-left: 5px;
+	color: #6c469b; 
 }
 
 /**** End Node Details CSS *****/
